--- a/main.html
+++ b/main.html
@@ -5,10 +5,20 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+		main{widht:150px;
+			height:150px;
+		background-color: black;}
+		
+		p{margin-left:32px;
+		padding:10px;}
+		
+		
+	</style>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main class=Accio id=Job> 
+	<main class=Accio id=Job > 
 		<p class= hello-accio-job> Hello Accio Job </p>
 			
 	
