--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 	<style>
-		main{widht:150px;
+		#Job{widht:150px;
 			height:150px;
 		background-color: black;}
 		
-		p{margin-left:32px;
+		.hello-accio-job{margin-left:32px;
 		padding:10px;}
 		
 		
