--- a/main.html
+++ b/main.html
@@ -5,21 +5,12 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-	<style>
-		#Job{widht:150px;
-			height:150px;
-		background-color: black;}
-		
-		.hello-accio-job{margin-left:32px;
-		padding:10px;}
-		
-		
-	</style>
+	
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main class=Accio id=Job > 
-		<p class= hello-accio-job> Hello Accio Job </p>
+	<main class="Accio" id="Job" > 
+		<p class= "hello-accio-job"> Hello Accio Job </p>
 			
 	
 	</main
