--- a/main.html
+++ b/main.html
@@ -8,10 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main>
-		<p class = "hello-accio-job" >
-			Hello Accio Job
-		</p>
+	<main class="accio" id="job">
+			<p class="Hello-accio">Hello Accio JOb</p>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
