--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
+<main class = "accio" id = "job"> 
+	<p class= "hello-accio"> Hello Accio Job
+	</p>
+</main>
 	<!-- the entire body must be written by student -->
-	<main class="accio" id="job">
-			<p class="Hello-accio">Hello Accio Job</p>
-	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
