--- a/main.html
+++ b/main.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-<main class = "accio" id = "job"> 
-	<p class= "hello-accio"> Hello Accio Job
-	</p>
-</main>
 	<!-- the entire body must be written by student -->
+	<main class="accio" id="job" style="height: 150px; width: 150px; background-color: black;">
+        <p class="hello-accio" style="color: white; margin-left: 32px; padding: 10px;">Hello Accio Job</p>
+    </main>
     <script type="text/javascript" src="./script.js">
 </script>
 
